@@ -128,6 +128,7 @@ void Protocol::setStatus(Status status)
 void Protocol::doSetStatus(Status status)
 {
 	CurrentStatus = status;
+
 	if (!CurrentStatus.isDisconnected())
 	{
 		emit statusChanged(CurrentAccount, CurrentStatus);
@@ -272,4 +273,9 @@ bool Protocol::isConnected()
 bool Protocol::isConnecting()
 {
 	return Machine->isLoggingIn();
+}
+
+bool Protocol::isDisconnecting()
+{
+	return Machine->isLoggingOut();
 }
